--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,12 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    
+    <div id="panel">
+      <button type="button" data-action="start">Start</button>
+      <button type="button" data-action="stop">Stop</button>
+    </div>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
 </html>
